-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 7u4, 8, 9
-
Component/s: client-libs
-
b23
-
generic
-
os_x
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8284831 | 11.0.16-oracle | Dmitry Markov | P3 | Resolved | Fixed | b04 |
| JDK-8287088 | 11.0.16 | Martin Doerr | P3 | Resolved | Fixed | b04 |
| JDK-8285002 | 8u341 | Dmitry Markov | P3 | Resolved | Fixed | b03 |
.SUMMARY
When in a tab group if you arrow between tabs there are no VoiceOver announcements.
.STEPS TO REPRODUCE
1. Start VoiceOver (Command F5), using default settings, e.g. the VO cursor tracking the focused control.
2. cd ~/OpenJDK/macosx-port/build/macosx-universal/
3. bin/java -jar /Library/Java/Demos/JFC/SwingSet2/SwingSet2.jar
4. Press tab repeatedly until focus is in the tab group.
5. Press left right arrows to move focus between the tabs.
.RESULTS
Nothing is heard from VoiceOver.
.VERSION
OS:
OSX 10.7.2
Java:
openjdk version "1.7.0-internal"
OpenJDK Runtime Environment (build 1.7.0-internal-petebrunet_2011_10_08_00_36-b00)
OpenJDK 64-Bit Server VM (build 21.0-b17, mixed mode)
.REGRESSION
Provide information on steps taken to isolate the problem.
Describe circumstances where the problem occurs or does not occur,
such as software versions and/or hardware configurations.
.NOTES
Attach any relevant screen shots, crash logs, or console output.
Describe anything else that might be useful in resolving the problem,
such as leads on diagnosis, any workarounds, or first observed configuration.
- backported by
-
JDK-8284831 [macosx] When in a tab group if you arrow between tabs there are no VoiceOver announcements.
-
- Resolved
-
-
JDK-8285002 [macosx] When in a tab group if you arrow between tabs there are no VoiceOver announcements.
-
- Resolved
-
-
JDK-8287088 [macosx] When in a tab group if you arrow between tabs there are no VoiceOver announcements.
-
- Resolved
-
- duplicates
-
JDK-7124298 [macosx] Nothing heard from VoiceOver when tabbing between a nested tab group and a parent tab group
-
- Closed
-
- relates to
-
JDK-8066493 [macosx] Tab group has null children
-
- Open
-
-
JDK-7124298 [macosx] Nothing heard from VoiceOver when tabbing between a nested tab group and a parent tab group
-
- Closed
-