7124301: [macosx] When in a tab group if you arrow between tabs there are noVoiceOver announcements 7124298: [macosx] Nothing heard from VoiceOver when tabbing between a nestedtab group and a parent tab group

Reviewed-by: serb, sveerabhadra